--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     </div>
 
     <div id="conteudo" class="hidden">
-      <label for="categoriaSelect"><strong>Categoria:</strong></label>
+      <label for="categoriaSelect"><strong>Setor do Centro de Atividades Técnicas:</strong></label>
       <select id="categoriaSelect" onchange="filtrarRelatorios()">
-        <option value="">-- Todas as categorias --</option>
+        <option value="">-- Todos os Setores --</option>
         <option value="analiseprojeto">Análise de Projetos</option>
         <option value="gerenciaadministrativa">Gerência Administrativa</option>
         <option value="gerenciavistoria">Gerência de Vistoria</option>
