--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
   </div>
 
   <footer>
-    Página desenvolvida por Miercio Martinelli Guimarães - <span id="dataHora"></span>
+    Página desenvolvida por Miercio Martinelli Guimarães
+    <br><span id="dataHora"></span>
   </footer>
 
   <script src="script.js"></script>
