--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </main>
 
   <div id="relatorioView">
-    <button id="voltarBtn" onclick="voltarParaLista()">⬅ Voltar</button>
+    <button id="voltarBtn" onclick="voltarParaLista()">⬅ Retornar para a Plataforma</button>
     <iframe id="relatorioIframe" src=""></iframe>
   </div>
 
