--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Visualização de Relatórios BI</title>
+  <title>Plataforma de Indicadores - CAT</title>
   <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  
 </head>
 <body>
   <header>
@@ -47,8 +49,7 @@
   </div>
 
   <footer>
-    Página desenvolvida por Miercio Martinelli Guimarães
-    <br><span id="dataHora"></span>
+    Página desenvolvida por Miercio Martinelli Guimarães<br><span id="dataHora"></span>
   </footer>
 
   <script src="script.js"></script>
